interface/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> conseil
Rule 1     conseil -> condition
Rule 2     conseil -> conseil condition
Rule 3     condition -> SI NOM EGAL STRING DPOINTS actions
Rule 4     condition -> SI NOM SUPERIEUR NOMBRE DPOINTS actions
Rule 5     condition -> SINON SI NOM SUPERIEUR NOMBRE DPOINTS actions
Rule 6     actions -> AFFICHER PROVERBE
Rule 7     actions -> actions ET PROVERBE

Terminals, with rules where they appear

AFFICHER             : 6
DPOINTS              : 3 4 5
EGAL                 : 3
ET                   : 7
NOM                  : 3 4 5
NOMBRE               : 4 5
PROVERBE             : 6 7
SI                   : 3 4 5
SINON                : 5
STRING               : 3
SUPERIEUR            : 4 5
error                : 

Nonterminals, with rules where they appear

actions              : 3 4 5 7
condition            : 1 2
conseil              : 2 0

Parsing method: LALR

state 0

    (0) S' -> . conseil
    (1) conseil -> . condition
    (2) conseil -> . conseil condition
    (3) condition -> . SI NOM EGAL STRING DPOINTS actions
    (4) condition -> . SI NOM SUPERIEUR NOMBRE DPOINTS actions
    (5) condition -> . SINON SI NOM SUPERIEUR NOMBRE DPOINTS actions

    SI              shift and go to state 3
    SINON           shift and go to state 4

    conseil                        shift and go to state 1
    condition                      shift and go to state 2

state 1

    (0) S' -> conseil .
    (2) conseil -> conseil . condition
    (3) condition -> . SI NOM EGAL STRING DPOINTS actions
    (4) condition -> . SI NOM SUPERIEUR NOMBRE DPOINTS actions
    (5) condition -> . SINON SI NOM SUPERIEUR NOMBRE DPOINTS actions

    SI              shift and go to state 3
    SINON           shift and go to state 4

    condition                      shift and go to state 5

state 2

    (1) conseil -> condition .

    SI              reduce using rule 1 (conseil -> condition .)
    SINON           reduce using rule 1 (conseil -> condition .)
    $end            reduce using rule 1 (conseil -> condition .)


state 3

    (3) condition -> SI . NOM EGAL STRING DPOINTS actions
    (4) condition -> SI . NOM SUPERIEUR NOMBRE DPOINTS actions

    NOM             shift and go to state 6


state 4

    (5) condition -> SINON . SI NOM SUPERIEUR NOMBRE DPOINTS actions

    SI              shift and go to state 7


state 5

    (2) conseil -> conseil condition .

    SI              reduce using rule 2 (conseil -> conseil condition .)
    SINON           reduce using rule 2 (conseil -> conseil condition .)
    $end            reduce using rule 2 (conseil -> conseil condition .)


state 6

    (3) condition -> SI NOM . EGAL STRING DPOINTS actions
    (4) condition -> SI NOM . SUPERIEUR NOMBRE DPOINTS actions

    EGAL            shift and go to state 8
    SUPERIEUR       shift and go to state 9


state 7

    (5) condition -> SINON SI . NOM SUPERIEUR NOMBRE DPOINTS actions

    NOM             shift and go to state 10


state 8

    (3) condition -> SI NOM EGAL . STRING DPOINTS actions

    STRING          shift and go to state 11


state 9

    (4) condition -> SI NOM SUPERIEUR . NOMBRE DPOINTS actions

    NOMBRE          shift and go to state 12


state 10

    (5) condition -> SINON SI NOM . SUPERIEUR NOMBRE DPOINTS actions

    SUPERIEUR       shift and go to state 13


state 11

    (3) condition -> SI NOM EGAL STRING . DPOINTS actions

    DPOINTS         shift and go to state 14


state 12

    (4) condition -> SI NOM SUPERIEUR NOMBRE . DPOINTS actions

    DPOINTS         shift and go to state 15


state 13

    (5) condition -> SINON SI NOM SUPERIEUR . NOMBRE DPOINTS actions

    NOMBRE          shift and go to state 16


state 14

    (3) condition -> SI NOM EGAL STRING DPOINTS . actions
    (6) actions -> . AFFICHER PROVERBE
    (7) actions -> . actions ET PROVERBE

    AFFICHER        shift and go to state 18

    actions                        shift and go to state 17

state 15

    (4) condition -> SI NOM SUPERIEUR NOMBRE DPOINTS . actions
    (6) actions -> . AFFICHER PROVERBE
    (7) actions -> . actions ET PROVERBE

    AFFICHER        shift and go to state 18

    actions                        shift and go to state 19

state 16

    (5) condition -> SINON SI NOM SUPERIEUR NOMBRE . DPOINTS actions

    DPOINTS         shift and go to state 20


state 17

    (3) condition -> SI NOM EGAL STRING DPOINTS actions .
    (7) actions -> actions . ET PROVERBE

    SI              reduce using rule 3 (condition -> SI NOM EGAL STRING DPOINTS actions .)
    SINON           reduce using rule 3 (condition -> SI NOM EGAL STRING DPOINTS actions .)
    $end            reduce using rule 3 (condition -> SI NOM EGAL STRING DPOINTS actions .)
    ET              shift and go to state 21


state 18

    (6) actions -> AFFICHER . PROVERBE

    PROVERBE        shift and go to state 22


state 19

    (4) condition -> SI NOM SUPERIEUR NOMBRE DPOINTS actions .
    (7) actions -> actions . ET PROVERBE

    SI              reduce using rule 4 (condition -> SI NOM SUPERIEUR NOMBRE DPOINTS actions .)
    SINON           reduce using rule 4 (condition -> SI NOM SUPERIEUR NOMBRE DPOINTS actions .)
    $end            reduce using rule 4 (condition -> SI NOM SUPERIEUR NOMBRE DPOINTS actions .)
    ET              shift and go to state 21


state 20

    (5) condition -> SINON SI NOM SUPERIEUR NOMBRE DPOINTS . actions
    (6) actions -> . AFFICHER PROVERBE
    (7) actions -> . actions ET PROVERBE

    AFFICHER        shift and go to state 18

    actions                        shift and go to state 23

state 21

    (7) actions -> actions ET . PROVERBE

    PROVERBE        shift and go to state 24


state 22

    (6) actions -> AFFICHER PROVERBE .

    ET              reduce using rule 6 (actions -> AFFICHER PROVERBE .)
    SI              reduce using rule 6 (actions -> AFFICHER PROVERBE .)
    SINON           reduce using rule 6 (actions -> AFFICHER PROVERBE .)
    $end            reduce using rule 6 (actions -> AFFICHER PROVERBE .)


state 23

    (5) condition -> SINON SI NOM SUPERIEUR NOMBRE DPOINTS actions .
    (7) actions -> actions . ET PROVERBE

    SI              reduce using rule 5 (condition -> SINON SI NOM SUPERIEUR NOMBRE DPOINTS actions .)
    SINON           reduce using rule 5 (condition -> SINON SI NOM SUPERIEUR NOMBRE DPOINTS actions .)
    $end            reduce using rule 5 (condition -> SINON SI NOM SUPERIEUR NOMBRE DPOINTS actions .)
    ET              shift and go to state 21


state 24

    (7) actions -> actions ET PROVERBE .

    ET              reduce using rule 7 (actions -> actions ET PROVERBE .)
    SI              reduce using rule 7 (actions -> actions ET PROVERBE .)
    SINON           reduce using rule 7 (actions -> actions ET PROVERBE .)
    $end            reduce using rule 7 (actions -> actions ET PROVERBE .)

